// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider component renders horizontal divider 1`] = `
@media  {
  .c-fxIenL {
    border: 0;
    background: var(--colors-grey200);
  }
}

@media  {
  .c-fxIenL-jokUAR-orientation-horizontal {
    height: 1px;
    width: 100%;
  }
}

<div>
  <hr
    class="c-fxIenL c-fxIenL-jokUAR-orientation-horizontal"
  />
</div>
`;

exports[`Divider component renders vertical divider 1`] = `
@media  {
  .c-fxIenL {
    border: 0;
    background: var(--colors-grey200);
  }
}

@media  {
  .c-fxIenL-jokUAR-orientation-horizontal {
    height: 1px;
    width: 100%;
  }

  .c-fxIenL-fKZlxR-orientation-vertical {
    height: 100%;
    width: 1px;
    min-height: var(--sizes-3);
  }
}

<div>
  <hr
    class="c-fxIenL c-fxIenL-fKZlxR-orientation-vertical"
  />
</div>
`;
